# logging

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/logging/: adapter.hpp  format.hpp  format.tpp  level.hpp  log.hpp  logging.hpp  message.hpp
include/logging/internal/: logging.tpp
include/logging/template/: format.tpp  logging.tpp  message.tpp
src/: format.cpp  logging.cpp  message.cpp
